testsuite/bad/bad042.jl
int main() { 
   int if;
   return 1;
}
